--- a/quake2.desktop
+++ b/quake2.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Name=Quake II
-Comment=Quake2 for linux
+Comment=Quake2 for Linux
 Comment[pl]=Quake2 dla Linuksa
 Exec=quake2
 Icon=quake2.png 
 Terminal=false
 Type=Application
-Category=Game;FPP;
+Category=Game;FirstPersonGame;
 Encoding=UTF-8
 # vi: encoding=utf-8
