- revert bogus commit, X-FPP is depreciated since vfolders 0.8
Changed files:
    quake2.desktop -> 1.5

--- a/quake2.desktop
+++ b/quake2.desktop
@@ -6,6 +6,6 @@ Exec=quake2
 Icon=quake2.png 
 Terminal=false
 Type=Application
-Category=Game;X-FPPGame;
+Category=Game;FirstPersonGame;
 Encoding=UTF-8
 # vi: encoding=utf-8
