--- a/quake2.desktop
+++ b/quake2.desktop
@@ -6,6 +6,6 @@ Exec=quake2
 Icon=quake2.png 
 Terminal=false
 Type=Application
-Category=Game;X-FPPGame;
+Categories=Game;X-FPPGame;
 Encoding=UTF-8
 # vi: encoding=utf-8
