- some coop mode settings
Changed files:
    quake2-server.conf -> 1.2

--- a/quake2-server.conf
+++ b/quake2-server.conf
@@ -1,4 +1,10 @@
+// dm flags:
 set timelimit 20
 set fraglimit 25
 set dmflags 532
 map fact3
+
+// coop mode flags:
+//set dmflags 16
+//set coop 1
+//map train
